test_suite/alan-2022-examples/failing/006820_mutation.alan
source B begin leave true "" end
